// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npm2yarn plugin does not re-import tabs components when already imported above 1`] = `
"import Tabs from '@theme/Tabs';

import TabItem from '@theme/TabItem';

<Tabs>
<TabItem value=\\"npm\\">

\`\`\`bash
  $ npm install --global docusaurus
\`\`\`

</TabItem>
<TabItem value=\\"yarn\\" label=\\"Yarn\\">

\`\`\`bash
  $ yarn add --global docusaurus
\`\`\`

</TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin does not re-import tabs components when already imported below 1`] = `
"<Tabs>
<TabItem value=\\"npm\\">

\`\`\`bash
  $ npm install --global docusaurus
\`\`\`

</TabItem>
<TabItem value=\\"yarn\\" label=\\"Yarn\\">

\`\`\`bash
  $ yarn add --global docusaurus
\`\`\`

</TabItem>
</Tabs>

import Tabs from '@theme/Tabs';

import TabItem from '@theme/TabItem';
"
`;

exports[`npm2yarn plugin works on installation file 1`] = `
"import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Tabs>
<TabItem value=\\"npm\\">

\`\`\`bash
  $ npm install --global docusaurus
\`\`\`

</TabItem>
<TabItem value=\\"yarn\\" label=\\"Yarn\\">

\`\`\`bash
  $ yarn add --global docusaurus
\`\`\`

</TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin works on plugin file 1`] = `
"import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Installing a plugin

A plugin is usually a npm package, so you install them like other npm packages using npm.

<Tabs>
<TabItem value=\\"npm\\">

\`\`\`bash
npm install --save docusaurus-plugin-name
\`\`\`

</TabItem>
<TabItem value=\\"yarn\\" label=\\"Yarn\\">

\`\`\`bash
yarn add docusaurus-plugin-name
\`\`\`

</TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin works when language is not set 1`] = `
"\`\`\`npm2yarn
npm install --save docusaurus-plugin-name
\`\`\`

\`\`\`bash
npm install --save docusaurus-plugin-name
\`\`\`

\`\`\`shell
npm install --save docusaurus-plugin-name
\`\`\`
"
`;
